adding link to the author's  in acknowledgment section and updating author name in README file

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                           <h4 class="card-title ml-3 mb-md-1">Search by city</h4>
                           <div class="d-flex flex-column flex-md-row">
                             <div class="col-md-10 pr-md-0">
-                            <input class="form-control bor-rad-0 bck-clip-unset" type="text">
+                            <input class="form-control search-bar-padd bor-rad-0 bck-clip-unset" type="text">
                             </div>
                             <div class="col-md-2 pr-md-0 pl-md-0">
                             <a href="result-page.html" class="btn btn-secondary btn-lg btn-block bck-color search-btn-prop">Search </a>
@@ -62,13 +62,13 @@
               </div>
 
             <div class="d-flex flex-column mrg">
-                <h3 class="text-center f-size p-4">The search portal for finding houses is working in four simple ways </h3>
+                <h3 class="text-center f-size f-size-tab p-4">The search portal for finding houses is working in four simple ways </h3>
               <div class="d-flex flex-wrap">
                 <div class="col-12 col-lg-6 mb-2 srch-inf-cont">
                   <div class="card text-center br-none">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item font-weight-bold f-size-icons br-none"><i class="fa fa-search" aria-hidden="true"></i></li>
-                      <li class="list-group-item font-weight-bold f-size br-none">1-Search:</li>
+                      <li class="list-group-item font-weight-bold f-size f-size-article br-none">1-Search:</li>
                       <li class="list-group-item">It's simple. On search portal, enter the name of a city, you are planning to visit and click on search. Alternatively click on the search link on the top menu to view the list of all cities.</li>
                     </ul>
                   </div>
@@ -77,7 +77,7 @@
                   <div class="card text-center br-none">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item font-weight-bold f-size-icons br-none"><i class="fas fa-map-marked-alt"></i></li>
-                      <li class="list-group-item font-weight-bold f-size br-none">2-LOCATE:</li>
+                      <li class="list-group-item font-weight-bold f-size f-size-article br-none">2-LOCATE:</li>
                       <li class="list-group-item">It's simple. On search portal, enter the name of a city, you are planning to visit and click on search. Alternativelyclick on the search link on the top menu to view the list of all cities.</li>
                     </ul>
                   </div>
@@ -87,7 +87,7 @@
                   <div class="card text-center br-none">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item font-weight-bold f-size-icons br-none"><i class="fa fa-wpforms" aria-hidden="true"></i></li>
-                      <li class="list-group-item font-weight-bold f-size br-none">3-APPLY:</li>
+                      <li class="list-group-item font-weight-bold f-size f-size-article br-none">3-APPLY:</li>
                       <li class="list-group-item">It's simple. On search portal, enter the name of a city, you are planning to visit and click on search. Alternatively click on the search link on the top menu to view the list of all cities.</li>
                     </ul>
                   </div>
@@ -96,7 +96,7 @@
                   <div class="card text-center br-none">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item font-weight-bold f-size-icons br-none"><i class="fas fa-umbrella-beach"></i></li>
-                      <li class="list-group-item font-weight-bold f-size br-none">4-RELAX:</li>
+                      <li class="list-group-item font-weight-bold f-size f-size-article br-none">4-RELAX:</li>
                       <li class="list-group-item">It's simple. On search portal, enter the name of a city, you are planning to visit and click on search. Alternatively click on the search link on the top menu to view the list of all cities.</li>
                     </ul>
                   </div>
@@ -112,8 +112,8 @@
                     <div class="side-image side-image bck-img-prop rounded-circle mrg"></div>
                   </div>
                   <div class="col-12 card-prop order-md-1 col-md-8">     
-                    <h4 class="f-size c-white">Over 10,000 Real Estate Agencies registered with us</h4>
-                    <p class="lead smaller-font c-white">Fina a helth pint by using filtered search engine</p>
+                    <h4 class="f-size f-size-article c-white">Over 10,000 Real Estate Agencies registered with us</h4>
+                    <p class="lead smaller-font c-white">Fina a house by using filtered search engine</p>
                     <button type="button" class="btn btn-bck-col btn-pad w-70">Find houses</button>
                   </div>
                </div> 
@@ -126,8 +126,8 @@
                     <div class="side-image-2 side-image bck-img-prop rounded-circle mrg"></div>
                   </div>
                   <div class="col-12 card-prop order-md-1 col-md-8">     
-                    <h4 class="f-size c-white">Over 10,000 Real Estate Agencies registered with us</h4>
-                    <p class="lead smaller-font c-white">Fina a helth pint by using filtered search engine</p>
+                    <h4 class="f-size f-size-article c-white">Over 10,000 Real Estate Agencies registered with us</h4>
+                    <p class="lead smaller-font c-white">Fina a house by using filtered search engine</p>
                     <button type="button" class="btn btn-bck-col btn-pad w-70">Find houses</button>
                   </div>
                </div> 
@@ -140,8 +140,8 @@
                     <div class="side-image-3 side-image bck-img-prop rounded-circle mrg"></div>
                   </div>
                   <div class="col-12 card-prop order-md-1 col-md-8">     
-                    <h4 class="f-size c-white">Over 10,000 Real Estate Agencies registered with us</h4>
-                    <p class="lead smaller-font c-white">Fina a helth pint by using filtered search engine</p>
+                    <h4 class="f-size f-size-article c-white">Over 10,000 Real Estate Agencies registered with us</h4>
+                    <p class="lead smaller-font c-white">Fina a house by using filtered search engine</p>
                     <button type="button" class="btn btn-bck-col btn-pad w-70">Find houses</button>
                   </div>
                </div> 
@@ -172,14 +172,14 @@
               <div class="card-header text-uppercase font-weight-bold br-none bck-transp">
                 <h4 class="text-center c-white subscribe">subscribe</h4> 
               </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item bck-transp br-none">
-                    <input type="email" class="form-control bor-rad-0 bck-transp bord-email text-col" id="exampleInputEmail1" aria-describedby="exampleInputEmail1" placeholder="you@example.com">
-                  
-                </li>
-                <li class="list-group-item mrg bck-transp">
-                  <button type="submit" class="btn btn-primary bck-transp bord-email c-white">Send</button></li>
+              <form>
+              <ul class="list-group list-group-flush "> 
+                <li class="list-group-item bck-transp br-none d-flex">
+                    <input type="email" class="form-control bor-rad-0 bck-transp bord-email text-col" id="exampleInputEmail1" aria-describedby="exampleInputEmail1" placeholder="you@example.com"> 
+                    <button type="submit" class="btn btn-primary bord-email c-white bck-color-grey bor-rad-0">Send</button>
+                </li>  
               </ul>
+            </form>
             </div>
           </div>
           <div class="col-12 mt-3 col-md-4 col-lg-4 ft-card-mx-width mrg">
@@ -224,8 +224,8 @@
             <i class="fab fa-tumblr pr-2"></i>
           </div>
           
-          <div class="col-12 col-md-9 text-right justify-content-end d-flex flex-wrap">
-            <p class="cont-col smallest-font mb-0">COPYRIGHT © 2020 PATASHULE INC. ALL RIGHTS RESERVED. THIS PROJECT WAS BASED IN PATASHULE DESIGN MADE BY <span class="ft-text">MATHEW NJUGUNA </span> AND <span class="ft-text">SAM ACHOLA</span>.</p>
+          <div class="col-12 col-md-9 justify-content-end d-flex flex-wrap">
+            <p class="cont-col smallest-font mb-0 text-sm-left text-md-right">COPYRIGHT © 2020 PATASHULE INC. ALL RIGHTS RESERVED. THIS PROJECT WAS BASED IN PATASHULE DESIGN MADE BY <span class="ft-text">MATHEW NJUGUNA </span> AND <span class="ft-text">SAM ACHOLA</span>.</p>
           </div>
 
         </div>
