--- a/result-page.html
+++ b/result-page.html
@@ -34,14 +34,14 @@
                       <p class="text-center p-3 icon-style-map display-4">Filter By City, District, And Price</p>
                   <div class="d-flex flex-column flex-md-row flex-lg-row">
                         <!--City-->
-                      <form class="col-12 col-md-3 result-pg">
+                  <div class="col-12 col-md-3 result-pg">
                         <label for="city" class="ft-sz">
                           City</label>
                         <input type="text" class="form-control bor-rad-0" id="city" placeholder="Istanbul">
-                      </form>
+                  </div>
 
                         <!--District-->
-                      <form class="col-12 col-md-3 result-pg">
+                  <div class="col-12 col-md-3 result-pg">
                         <label for="inputState-2" class="ft-sz">
                           District</label>
                         <select id="inputState-2"
@@ -52,9 +52,9 @@
                             <option>Uskudar</option>
                             <option>Fatih</option>
                         </select>
-                      </form>
+                  </div>
                         <!--Price-Category-->
-                      <form class="col-12 col-md-3 result-pg">
+                  <div class="col-12 col-md-3 result-pg">
                         <label for="inputState-1" class="ft-sz">
                             Price Category</label>
                         <select id="inputState-1"
@@ -65,9 +65,9 @@
                             <option>Budget</option>
                             <option>Cheep</option>
                         </select>
-                      </form>
+                  </div>
                         <!--Houses-->
-                      <form class="col-12 col-md-3 result-pg" id="houses">
+                  <div class="col-12 col-md-3 result-pg" id="houses">
                         <label for="inputState" class="ft-sz">
                             Houses/Appartments</label>
                         <select id="inputState"
@@ -78,13 +78,13 @@
                             <option>House-3</option>
                             <option>House-4</option>
                         </select>
-                      </form>                                        
+                  </div>                                        
                       <!--Search-btn-->
-                      <div class="d-flex btn-mg-top">
+                  <div class="d-flex btn-mg-top">
                         <a href="#" class="btn btn-srch-cl btn-height smallest-font c-white bor-rad-0">Search</a>
-                        <button type="button" class="btn btn-srch-clear btn-height smallest-font p-1 bor-rad-0"><i class="fas fa-eraser"></i>Clear filter</button>
+                        <button type="button" class="btn clearfilter-fweight btn-srch-clear btn-height smallest-font p-1 bor-rad-0"><i class="fas fa-eraser"></i>Clear filter</button>
                     </div>
-                  </div>
+              </div>
 
 
               </div>
@@ -102,19 +102,19 @@
                                 <div class="p-2 pt-4">
                                   <ul class="list-group list-group-flush text-center line-h">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h5 class="c-white">
-                                          <a href="application-page.html" class="c-white header-a"> Location: Istanbul
-                                          </a></h5>
+                                    <h6 class="c-white">
+                                    <a href="application-page.html" class="c-white header-a"> Location: Istanbul
+                                    </a></h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="c-white"><a href="application-page.html" class="c-white header-a"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</a></h5></li>
+                                    <h6 class="c-white"><a href="application-page.html" class="c-white header-a"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</a></h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
                             </div>
@@ -128,18 +128,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h5 class="c-white">Location: Istanbul
-                                        </h5>
+                                        <h6 class="c-white">Location: Istanbul
+                                        </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h5></li>
+                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
                             </div>
@@ -153,18 +153,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h5 class="c-white">Location: Istanbul
-                                        </h5>
+                                        <h6 class="c-white">Location: Istanbul
+                                        </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h5></li>
+                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
                             </div>
@@ -178,18 +178,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h5 class="c-white">Location: Istanbul
-                                        </h5>
+                                        <h6 class="c-white">Location: Istanbul
+                                        </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h5></li>
+                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
                             </div>
@@ -203,18 +203,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h5 class="c-white">Location: Istanbul
-                                        </h5>
+                                        <h6 class="c-white">Location: Istanbul
+                                        </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h5></li>
+                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
                             </div>
@@ -228,18 +228,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h5 class="c-white">Location: Istanbul
-                                        </h5>
+                                        <h6 class="c-white">Location: Istanbul
+                                        </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h5></li>
+                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
                             </div>
@@ -253,18 +253,18 @@
                                 <div class="p-2 pt-4 line-h">
                                 <ul class="list-group list-group-flush text-center">
                                     <li class="list-group-item bck-transp br-none">
-                                        <h5 class="c-white">Location: Istanbul
-                                        </h5>
+                                        <h6 class="c-white">Location: Istanbul
+                                        </h6>
                                     </li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
-                                    District: Pera</h5></li>
+                                    <h6 class="c-white"><i class="fa fa-address-book-o" aria-hidden="true"></i>
+                                    District: Pera</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
-                                    Available from: 18 Nov 2020</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="fa fa-calendar" aria-hidden="true"></i>
+                                    Available from: 18 Nov 2020</h6></li>
                                     <li class="list-group-item bck-transp br-none">
-                                    <h5 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
-                                    Minimum stay: The minimum length of stay for this unit is 1 month</h5></li>
+                                    <h6 class="pr-1 c-white"><i class="far fa-calendar-check"></i>
+                                    Minimum stay: The minimum length of stay for this unit is 1 month</h6></li>
                                   </ul>
                                 </div>
                             </div>
@@ -299,14 +299,14 @@
               <div class="card-header text-uppercase font-weight-bold br-none bck-transp">
                 <h4 class="text-center c-white subscribe">subscribe</h4> 
               </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item bck-transp br-none">
-                    <input type="email" class="form-control bor-rad-0 bck-transp bord-email text-col" id="exampleInputEmail1" aria-describedby="exampleInputEmail1" placeholder="you@example.com">
-                  
-                </li>
-                <li class="list-group-item mrg bck-transp">
-                  <button type="submit" class="btn btn-primary bck-transp bord-email c-white">Send</button></li>
+              <form>
+              <ul class="list-group list-group-flush "> 
+                <li class="list-group-item bck-transp br-none d-flex">
+                    <input type="email" class="form-control bor-rad-0 bck-transp bord-email text-col" id="exampleInputEmail1" aria-describedby="exampleInputEmail1" placeholder="you@example.com"> 
+                    <button type="submit" class="btn btn-primary bord-email c-white bck-color-grey bor-rad-0">Send</button>
+                </li>  
               </ul>
+            </form>
             </div>
           </div>
           <div class="col-12 mt-3 col-md-4 col-lg-4 ft-card-mx-width mrg">
